# gtest_training

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: googletest.cmake
doc/: gtest_gmock_workshop.pptx  presentation.odp
googletest_course/doc/: gtest_gmock_workshop.odp
presentation/: presentation.odp
source/: CMakeLists.txt
source/triangle/test/: CMakeLists.txt  triangle_test_solution.cpp
training/awards/: CMakeLists.txt
training/awards/source/: awards.cpp
training/awards/test/: CMakeLists.txt  awards_test.cpp  awards_test_solution.cpp
training/triangle/: CMakeLists.txt
training/triangle/include/: awards.h  triangle.h
training/triangle/source/: triangle.cpp
training/triangle/test/: CMakeLists.txt  triangle_test.cpp  triangle_test_solution.cpp
